# NetComm

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py
core/: client.py  server.py
core/utils/: io.py
gui/: gui_client.py
gui/widgets/: chat_window.py  connect_dialog.py
src/cli/: main.py
src/gui/: main.py
src/gui/widgets/: chat_window.py  connect_dialog.py
src/interfaces/cli/: client_cli.py
src/interfaces/gui/: client_gui.py
src/interfaces/gui/widgets/: chat_window.py
src/networking/: client.py  server.py
src/networking/protocol/: io.py
